--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -101,3 +101,14 @@
 input[type="file"] {
     display: none;
 }
+
+#followUnfollowButton {
+    background-color: #8088E8;
+    color: white;
+    font-size: 1rem;
+    border: none;
+    border-radius: 0.2rem;
+    letter-spacing: 2px;
+    font-weight: bold;
+    padding: 0.3125rem 0.625rem 0.3125rem 0.625rem;
+}
