--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -96,6 +96,10 @@
 
 .custom--file--upload {
     color: blue;
+    background-color: white;
+    font-family: poppins, sans-serif;
+    font-size: 0.825rem;
+    cursor: pointer;
 }
 
 input[type="file"] {
