--- a/frontend/src/components/PostDetails/PostDetails.css
+++ b/frontend/src/components/PostDetails/PostDetails.css
@@ -30,7 +30,7 @@
 .postDetails--header {
     display: flex;
     align-items: center;
-    column-gap: 1rem;
+    justify-content: space-between;
     padding: 1rem 0rem 1rem 1rem;
     border-bottom: 1px solid #6F6F6F;
 }
@@ -44,6 +44,24 @@
     height: 100%;
 }
 
+.postDetails--caption {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+}
+
 #postDetails--image {
     width: 50%;
+}
+
+#delete_post_button {
+    background-color: blue;
+    color: white;
+    font-family: poppins, sans-serif;
+    border-radius: 1.5rem;
+    font-weight: bold;
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
+    width: 8rem;
+    margin-right: 1rem;
 }
